// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
.emotion-1 + a {
  margin-left: 0.5rem;
}

.emotion-0 {
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  cursor: pointer;
  font-weight: 600;
  background-color: #FFC400;
  color: #030D36;
  height: 48px;
  line-height: 48px;
  padding: 0 1.5rem;
}

.emotion-0:hover {
  background-color: #E9B300;
}

<a
  className="emotion-1"
  href="/foo"
>
  <button
    className="emotion-0"
  >
    hello
  </button>
</a>
`;

exports[`Button renders onClick when trackLink is set 1`] = `
.emotion-1 + a {
  margin-left: 0.5rem;
}

.emotion-0 {
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  cursor: pointer;
  font-weight: 600;
  background-color: #FFC400;
  color: #030D36;
  height: 48px;
  line-height: 48px;
  padding: 0 1.5rem;
}

.emotion-0:hover {
  background-color: #E9B300;
}

<a
  className="emotion-1"
  href="/foo"
  onClick={[Function]}
>
  <button
    className="emotion-0"
  >
    hello
  </button>
</a>
`;

exports[`Button renders primary colours 1`] = `
.emotion-1 + a {
  margin-left: 0.5rem;
}

.emotion-0 {
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  cursor: pointer;
  font-weight: 600;
  background-color: #FFC400;
  color: #030D36;
  background-color: #FFC400;
  color: #030D36;
  height: 48px;
  line-height: 48px;
  padding: 0 1.5rem;
}

.emotion-0:hover {
  background-color: #E9B300;
}

.emotion-0:hover {
  background-color: #E9B300;
}

<a
  className="emotion-1"
  href="/foo"
>
  <button
    className="emotion-0"
  >
    hello
  </button>
</a>
`;

exports[`Button renders secondary colours 1`] = `
.emotion-1 + a {
  margin-left: 0.5rem;
}

.emotion-0 {
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  cursor: pointer;
  font-weight: 600;
  background-color: #030D36;
  color: #FFF;
  height: 48px;
  line-height: 48px;
  padding: 0 1.5rem;
}

.emotion-0:hover {
  background-color: #343C5D;
}

<a
  className="emotion-1"
  href="/foo"
>
  <button
    className="emotion-0"
  >
    hello
  </button>
</a>
`;
